#3427 closed bug (fixed)
bad clipping in Media preflet
Reported by: | luroh | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Media | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The clipped areas of two of the buttons in 'Audio Settings' do not display after expanding the preflet window. Screenshots attached.
Attachments (2)
Change History (4)
by , 13 years ago
Attachment: | before.png added |
---|
by , 13 years ago
comment:1 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev31038.